--- a/Init.ipynb
+++ b/Init.ipynb
@@ -1,17 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 77,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "DEBUG=True"
+    "# Setup Git-crypt with empty directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEBUG=True\n",
+    "\n",
+    "# feature flags to debug\n",
+    "SETUP=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -32,23 +42,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SETUP:\n",
+    "    pass\n",
+    "    %gcrypt /Users/kenneyhe/Desktop/data-science status -e\n",
+    "    %gcrypt /Users/kenneyhe/Desktop/data-science init\n",
+    "    %gcrypt /Users/kenneyhe/Desktop/data-science export-key git-crypt-ds-key\n",
+    "    !mv git-crypt-ds-key ..\n",
+    "    !git add .gitattributes\n",
+    "    # if using osx to add\n",
+    "    !brew install --build-from-source git-crypt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: this repository has already been initialized with git-crypt.\r",
-      "\r\n"
+      "Overwriting .gitattributes\n"
      ]
     }
    ],
    "source": [
-    "%gcrypt /Users/kenneyhe/Desktop/data-science status -e\n",
-    "%gcrypt /Users/kenneyhe/Desktop/data-science init\n",
-    "\n",
-    "%gcrypt /Users/kenneyhe/Desktop/data-science export-key git-crypt-ds-key"
+    "%%writefile .gitattributes\n",
+    "secrets.yaml filter=git-crypt diff=git-crypt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\r\n",
+      "Your branch is ahead of 'origin/main' by 3 commits.\r\n",
+      "  (use \"git push\" to publish your local commits)\r\n",
+      "\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\r\n",
+      "\t\u001b[31mmodified:   .ipynb_checkpoints/Init-checkpoint.ipynb\u001b[m\r\n",
+      "\t\u001b[31mmodified:   Init.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Tell git-crypt to encrypt secrets.yaml\""
    ]
   },
   {
@@ -56,29 +107,7 @@
    "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!mv git-crypt-ds-key .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-83-9bb63c43fd14>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-83-9bb63c43fd14>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    secrets.yaml filter=git-crypt diff=git-crypt\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "%writefile .gitattributes\n",
-    "\n",
-    "secrets.yaml filter=git-crypt diff=git-crypt"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
