add new secrets, add sys

--- a/Init.ipynb
+++ b/Init.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,14 @@
     "\n",
     "# feature flags to debug\n",
     "SETUP=False\n",
+    "UNLOCK=True\n",
     "INCR_EXPERIMENTAL=False\n",
     "#ref: https://stephanosterburg.gitbook.io/scrapbook/data-science/jupiter-notebook-tips-and-tricks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -44,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Working directory not clean.\r",
+      "\r\n",
+      "Please commit your changes or 'git stash' them before running 'git-crypt unlock'.\r",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
     "if SETUP:\n",
     "    pass\n",
@@ -57,12 +69,17 @@
     "    !git add .gitattributes\n",
     "    # if using osx to add\n",
     "    !brew install --build-from-source git-crypt\n",
-    "    %gcrypt /Users/kenneyhe/Desktop/data-science unlock ../git-crypt-ds-key"
+    "    %gcrypt /Users/kenneyhe/Desktop/data-science unlock ../git-crypt-ds-key\n",
+    "\n",
+    "if UNLOCK:\n",
+    "    !cp ../git-crypt-ds-key .\n",
+    "    %gcrypt /Users/kenneyhe/Desktop/data-science unlock git-crypt-ds-key\n",
+    "    !rm git-crypt-ds-key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -93,17 +110,12 @@
       "Changes not staged for commit:\r\n",
       "  (use \"git add <file>...\" to update what will be committed)\r\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\r\n",
-      "\t\u001b[31mmodified:   .ipynb_checkpoints/Init-checkpoint.ipynb\u001b[m\r\n",
       "\t\u001b[31mmodified:   Init.ipynb\u001b[m\r\n",
       "\r\n",
       "Untracked files:\r\n",
       "  (use \"git add <file>...\" to include in what will be committed)\r\n",
       "\t\u001b[31m.ipynb_checkpoints/Api-checkpoint.ipynb\u001b[m\r\n",
-      "\t\u001b[31mApi.ipynb\u001b[m\r\n",
-      "\t\u001b[31mBackupHelper.ipynb\u001b[m\r\n",
-      "\t\u001b[31mTests/\u001b[m\r\n",
-      "\t\u001b[31mapi.py\u001b[m\r\n",
-      "\t\u001b[31moutput_20210102001609574400b_run_backup_984a15d.ipynb\u001b[m\r\n",
+      "\t\u001b[31m.ipynb_checkpoints/BackupHelper-checkpoint.ipynb\u001b[m\r\n",
       "\r\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
      ]
@@ -115,29 +127,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load secrets.yaml\n",
-    "PASS=\"68a5de7f-44e1-4de2-8e25-4af397cfe3b7\"\n",
+    "PASS=\"951766d1-4c6d-44be-b610-ee0eba6f372d\"\n",
     "USER=\"kenney\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load api.py\n",
     "import papermill as pm\n",
-    "import datetime, uuid, os\n",
+    "import datetime, uuid, os, sys\n",
     "\n",
     "timestamp=datetime.date.today().strftime(\"%Y%m%d%H%sb\")\n",
     "uuid_str=str(uuid.uuid1())[0:7]\n",
     "\n",
     "import ipywidgets as widgets\n",
+    "\n",
+    "# default feature flags\n",
+    "INCR_EXPERIMENTAL=False\n",
+    "DEBUG=False\n",
+    "RESTORE=False\n",
+    "DEP_NEED=False\n",
     "\n",
     "def sync_mobile(dir):\n",
     "    '''\n",
@@ -278,34 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06a7b0442d4c4ff69014310c412668ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Executing'), FloatProgress(value=0.0, max=10.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Tests is done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if DEBUG:\n",
+    "  import sys\n",
     "  backup([\"Tests\"])"
    ]
   },
@@ -362,23 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Working directory not clean.\r",
-      "\r\n",
-      "Please commit your changes or 'git stash' them before running 'git-crypt unlock'.\r",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%gcrypt /Users/kenneyhe/Desktop/data-science unlock ../git-crypt-ds-key"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
