fix api lint issues

--- a/BackupHelper.ipynb
+++ b/BackupHelper.ipynb
@@ -152,15 +152,13 @@
     "try:\n",
     "    output = client.images.push(repository=VALIDTAG)\n",
     "except docker.errors.ReadTimeoutError:\n",
-    "    print(\"timeout\")\n",
-    "    sys.exit(1)\n",
+    "    raise BaseException(\"timeout\")\n",
     "except:\n",
-    "    print(\"unknown\")\n",
-    "    sys.exit(1)\n",
+    "    raise BaseException(\"unknown\")\n",
     "# TODO check syntax of juypter\n",
-    "# TODO check json for error\n",
     "# TODO clean up same interview name image\n",
-    "print(output)"
+    "if DEBUG:\n",
+    "    print(output)"
    ]
   },
   {
@@ -168,7 +166,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if \"denied\" in output:\n",
+    "    raise BaseException(\"denied\")"
+   ]
   }
  ],
  "metadata": {
