add future backup ui widget class

--- a/Init.ipynb
+++ b/Init.ipynb
@@ -61,7 +61,8 @@
    ],
    "source": [
     "if SETUP:\n",
-    "    pass\n",
+    "    !python3 -m pip install ipywidgets\n",
+    "    !python3 -m pip install papermill\n",
     "    %gcrypt /Users/kenneyhe/Desktop/data-science status -e\n",
     "    %gcrypt /Users/kenneyhe/Desktop/data-science init\n",
     "    %gcrypt /Users/kenneyhe/Desktop/data-science export-key git-crypt-ds-key\n",
